syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";
import "google/api/annotations.proto";
package protobuf;

service PROTOBUF{
	rpc create (CreateRequest) returns (CreateReply) {
		option (google.api.http) = {
			post: "/v1/protobuf",
			body:"*"
		};
	}
	rpc Read (ReadRequest) returns (ReadReply) {
		  option (google.api.http) = {
			get: "/v1/protobuf/{Id}"
		};
	}
	rpc GetAll (GetAllRequest) returns (GetAllReply) {
		option (google.api.http) = {
			get: "/v1/protobuf"
		};
	}
	rpc Update (UpdateRequest) returns (UpdateReply) {
		option (google.api.http) = {
			put: "/v1/protobuf",
			body:"*"
		};
	}
	rpc Delete (DeleteRequest) returns (DeleteReply) {
		option (google.api.http) = {
			delete: "/v1/protobuf/{Id}"
		};
	}
}
//create
message CreateRequest{
	string Title=1;
	string Description=2;
	
}
message CreateReply{
	int32 Id=1;
}

//Read
message ReadRequest{
	int32 Id=1;
	
}
message ReadReply{
	int32 Id=1;
	string Title=2;
	string Description=3;
	string Status=4;
}
//GetAll
message GetAllRequest{

}
message GetAllReply{
	repeated ReadReply GetAll =1;
}
//update
message UpdateRequest{
	int32 Id=1;
	string Title=2;
	string Description=3;
	string Status=4;
}
message UpdateReply{
	int32 Id=1;
	
}
//delete
message DeleteRequest{
	int32 Id=1;

}
message DeleteReply{
	int32 Id=1;
	
}